--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
+          go-version: '^1.21.1'
       - name: Unit tests
         env:
           GOPATH: /home/runner/go
@@ -56,6 +57,7 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version-file: go.mod
+          go-version: '^1.21.1'
       - uses: helm/kind-action@v1.8.0
         id: kind
         with:
