chore: Added test for kubernetes version 1.28, limited testing to latest 7 versions

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,6 +37,7 @@ jobs:
     needs: get_version_matrix
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: true
       matrix:
         terraform_version:  ${{ fromJson(needs.get_version_matrix.outputs.terraform_versions) }}
         k8s_version:  ${{ fromJson(needs.get_version_matrix.outputs.k8s_versions) }}
