--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   get_version_matrix:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - id: get_version_matrix
@@ -19,7 +19,7 @@ jobs:
       terraform_versions: ${{ steps.get_version_matrix.outputs.terraform_versions }}
       k8s_versions: ${{ steps.get_version_matrix.outputs.k8s_versions }}
   unit_test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@master
       - name: Set up Go
@@ -35,7 +35,7 @@ jobs:
           make vet
   acc_test:
     needs: get_version_matrix
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     strategy:
       fail-fast: true
       matrix:
