feat: Optimised watch patterns
Signed-off-by: Steve Hipwell <steve.hipwell@gmail.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,6 +4,10 @@ on:
     branches:
       - master
 
+concurrency:
+  group: pr-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   KUBECONFIG: ${{ github.workspace }}/.kube/config
 
