chore: Refactored acceptance test matrix
Signed-off-by: Steve Hipwell <steve.hipwell@gmail.com>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -2,19 +2,33 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     directory: /
-    labels: [ dependencies ]
-    assignees: [ alekc ]
-    reviewers: [ alekc ]
+    groups:
+      github-actions:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+    labels: [dependencies]
+    assignees: [alekc]
+    reviewers: [alekc]
     commit-message:
       prefix: "Dependencies:"
     schedule:
       interval: daily
-  - package-ecosystem: "gomod"
-    directory: "/"
-    labels: [ dependencies ]
-    assignees: [ alekc ]
-    reviewers: [ alekc ]
+  - package-ecosystem: gomod
+    directory: /
+    groups:
+      gomod:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+    labels: [dependencies]
+    assignees: [alekc]
+    reviewers: [alekc]
     commit-message:
       prefix: "Dependencies:"
     schedule:
-      interval: "daily"
+      interval: daily
